--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
    
 } */
 
-.design{
+/* .design{
     border: 5px solid black;
     width: 100px;
     height: 300px;
@@ -24,4 +24,11 @@
 button{
     border: 1px solid black;
     border-radius: 5px;
+} */
+
+.bg{
+    background-color: red;
+}
+.blue{
+    background-color: rgba(0, 0, 255, 0.308);
 }
